--- a/server/package.json
+++ b/server/package.json
@@ -1,23 +1,26 @@
 {
-  "name": "server",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "dotenv": "^16.0.3",
-    "express": "^4.18.1",
-    "jsonwebtoken": "^9.0.0",
-    "mongoose": "^6.8.4"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.16"
-  }
+    "name": "server",
+    "version": "1.0.0",
+    "description": "HackSparrow Backend",
+    "main": "index.js",
+    "type": "module",
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon index.js",
+        "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "keywords": [],
+    "author": "",
+    "license": "ISC",
+    "dependencies": {
+        "dotenv": "^16.0.3",
+        "express": "^4.18.1",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^6.8.4",
+        "socket.io": "^4.6.0",
+        "uuid4": "^2.0.3"
+    },
+    "devDependencies": {
+        "nodemon": "^2.0.16"
+    }
 }
