--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.15.14",
     "appwrite": "^14.0.0",
     "axios": "^1.6.8",
+    "chart.js": "^4.4.2",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -24,6 +25,7 @@
     "react-quill": "^2.0.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.3",
+    "react-speech-kit": "^3.0.1",
     "redux": "^5.0.1",
     "uuid": "^9.0.1"
   },
