--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "axios": "^1.6.8",
         "dotenv": "^16.0.3",
         "express": "^4.18.1",
         "jsonwebtoken": "^9.0.0",
